Upload files to memory only and limit file size to 200kb.

--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,7 @@
           <form enctype="multipart/form-data" method="POST" action="/api/fileanalyse">
             <input id="inputfield" type="file" name="upfile">
             <input id="button" type="submit" value="Upload">
+            <p><em>Note:</em> Maximum file size = 200kb.</p>
           </form>
         </div>
       </div>
